<resources>
    <string name="app_name">SmartCityStudyApp</string>
    <string name="profile">Profil</string>
    <string name="results">Ergebnisse</string>
    <string name="activities">Aktivitäten</string>
    <string name="help">Hilfe</string>
    <string name="site_notice">Impressum</string>
    <string name="menu_heading">Menü</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_welcome">Willkommen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="teamactivity">Teamaktivitäten</string>
    <string name="action_settings">Settings</string>
    <string name="studyId">Personencode</string>
    <string name="enter">Eingeben</string>
    <string name="settings_show_welcome">Willkommensnachricht zeigen</string>
    <string name="invalid_user_id">Diesen Personencode gibt es nicht.</string>
    <string name="explanation_text">Hier kommt ein längerer Text, der das ganze Studienprozedere erklärt etc. pp. lorem impsum dolor.</string>
    <string name="welcome1">Willkommen 1</string>
    <string name="enter_user_id">Personencode eingeben</string>
    <string name="back_button_text">Zurück</string>
    <string name="forward_button_text">Weiter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Meldungen</string>
    <string name="incidents">Ereignisse</string>
    <string name="next">weiter</string>
    <string name="start">Start</string>
    <string name="code_hint">Personencode eingeben</string>
    <string name="slide_1_title">Vielen Dank,</string>
    <string name="slide_1_heading">dass du bei unserer Studie mitmachst!</string>
    <string name="slide_1_description">Hier hast du die Möglichkeit deinen individuellen Personencode einzugeben:</string>
    <string name="slide_2_title">Hier eine kurze \n Anleitung:</string>
    <string name="slide_2_description">Im Rahmen des SMARTer City - Projekts haben sich die Technische Universität Darmstadt und das Fraunhofer IGD dafür entschieden, eine digitale Plattform aufzubauen, um die direkte Umgebung von städtischen Bewohnern und Städtern sicherer und angenehmer zu gestalten.
    Einwohner von ganz Deutschland können in der SMARTer City - App angeben, wo Missstände im Straßenverkehr und sonstige Probleme im Stadtalltag und auf öffentlichen Plätzen auftauchen.</string>
    <string name="slide_2_description_2">Insgesamt ist das Ziel unserer App eine umfangreiche Datenbank mithilfe offener Daten der Stadt zu kreieren, um Probleme und Missstände schneller erkennen und darauf reagieren zu können.</string>
    <string name="slide_3_title">Anleitung zum \n Menü:</string>
    <string name="slide_3_description">Die wichtigsten Funktionen der App kurz erklärt:</string>
    <string name="slide_3_description_two">Im Profil siehst du deine aktuellen Punkte und
Anzahl deiner bereits gemachten Meldungen. Du
kannst außerdem deinen Avatar upgraden, wenn
du mehr Punkte machst! Punkte bekommst du,
wenn du Ereignisse meldest.
Dein eigenes Team besteht aus anderen App
Nutzern die in deiner Umgebung ebenfalls aktiv
sind. Die anderen Teams sind aus weiter entfernt
liegenden Gebieten.\n\n
Im Reiter Ereignisse kannst du Meldungen über
Probleme und Auffälligkeiten in deiner Umgebung
machen.
Falls du dir unsicher bist, was du melden könntest,
kannst du dir auch erstmal die Vorschläge anschauen, die am häufigsten in anderen Städten
gemeldet wurden.\n\n
Im Aktivitäten Bereich kannst du dir Meldungen
anderer App Nutzer anschauen und die Punkte
deines Teams und anderer Teams anschauen.\n\n
Im Meldungen Bereich wirst du über Geschehnisse in deiner Umgebung informiert.\n\n
Du kannst nun loslegen! Beachte, dass die Meldungen nicht nur von deinem Wohnort gesendet
werden können. Du kannst von überall aus Meldungen machen. Anhand deines Wohnorts entscheidet sich nur, welchem Team du zugeordnet
wirst.</string>
    <string name="slide_2_name_hint">Namen eingeben</string>
    <string name="slide_2_city_hint">Wohnort eingeben</string>
    <string name="help_heading">Fragen zur App?</string>
    <string name="help_subheading">Wir helfen dir weiter!</string>
    <string name="help_header_1">Was ist der Zweck dieser App?</string>
    <string name="help_header_2">Wie funktioniert die App?</string>
    <string name="help_header_3">Was passiert mit meinen Nutzerdaten?</string>
    <string name="help_header_4">Kann ich die Studie abbrechen?</string>
    <string name="help_button_1">⦿ Was ist der Zweck dieser App?</string>
    <string name="help_button_2">⦿ Wie funktioniert die App?</string>
    <string name="help_button_3">⦿ Was passiert mit meinen Nutzerdaten?</string>
    <string name="help_button_4">⦿ Kann ich die Studie abbrechen?</string>
    <string name="help_description_2">Derzeit konzentriert sich der Prototyp auf Darmstadt und weitere größere Städte im Umkreis von 200 km. Die Nutzer werden aufgefordert Problemen nachzugehen, um sicherheitsrelevante Probleme schneller und effizienter zu beheben. </string>
    <string name="help_description_3">Alle personenbezogenen Daten werden pseudonymisiert und auf unseren Servern gespeichert. Deine Eingaben und die Zustimmung zur Analyse deiner Daten (insbesondere zur Erhebung, Speicherung und Veröffentlichung) sind natürlich freiwillig.</string>
    <string name="help_contact_3">Falls du weitere Fragen hast, kannst du dich gerne an folgende Personen wenden:
    </string>
    <string name="contact_1">marion.stahl@stud.tu-darmstadt.de</string>
    <string name="contact_2">nina.gerber@tu-darmstadt.de</string>
    <string name="help_description_4">Du kannst die Studie jederzeit abbrechen. Dazu kannst du den folgenden Link verwenden.</string>
    <string name="help_title_1">Zweck der App</string>
    <string name="help_title_2">Funktionsweise</string>
    <string name="help_title_3">Nutzerdaten</string>
    <string name="help_title_4">Studie abbrechen</string>
    <string name="incidents_header">Neue Ereignisse in</string>
    <string name="incidents_subheader">deiner Umgebung</string>
    <string name="incidents_description">Hier einige Vorschläge, was du melden könntest:</string>
    <string name="incidents_location">Aktuellen Standort senden!</string>
    <string name="incidents_water">👁 Abwasser und Wasser</string>
    <string name="incidents_tree">👁 Bäume</string>
    <string name="incidents_electronic">👁 Elektronik</string>
    <string name="incidents_vehicles">👁 Fahrzeuge</string>
    <string name="incidents_paths">👁 Geh- und Radwege</string>
    <string name="incidents_buildings">👁 Gebäude</string>
    <string name="incidents_devices">👁 Geräte</string>
    <string name="incidents_health">👁 Gesundheitsgefährdung</string>
    <string name="incidents_noise">👁 Lärm</string>
    <string name="incidents_air">👁 Luftqualität</string>
    <string name="incidents_garbage">👁 Müll</string>
    <string name="incidents_parking">👁 Parken</string>
    <string name="incidents_smoke">👁 Rauch</string>
    <string name="incidents_wc">👁 Sanitäre Anlagen</string>
    <string name="incidents_streets">👁 Straßen</string>
    <string name="incidents_animals">👁 Tiere</string>
    <string name="incidents_polution">👁 Verschmutzung</string>
    <string name="incidents_other">👁 Sonstiges</string>
    <string name="water_heading">Abwasser und Wasser</string>
    <string name="water_one">Das Wassersystem ist defekt (z.B. ein Wasserleck oder andere Abwasserprobleme).</string>
    <string name="water_two">Kein heißes/kaltes Wasser steht zur Verfügung.</string>
    <string name="trees_heading">Bäume</string>
    <string name="trees_one">Bäume/Äste sind in schlechtem Zustand?</string>
    <string name="trees_two">Zu wenig Grünanlagen/Bäume?</string>
    <string name="trees_three">Bäume bzw. Äste können gefährlich werden? (z.B. Wurzeln ragen über die Straße)</string>
    <string name="electronic_heading">Elektronik?</string>
    <string name="electronic_one">Stromausfall?</string>
    <string name="electronic_two">Probleme mit der Elektronik? (z.B. Elektrische Verkabelung freiliegend)</string>
    <string name="vehicles_heading">Fahrzeuge</string>
    <string name="vehicles_one">Verlassenes Fahrzeug?</string>
    <string name="buildings_heading">Gebäude</string>
    <string name="buildings_one">Gefahr durch Gebäudestruktur? (z.B. einstürzendes Haus)</string>
    <string name="buildings_two">Nicht konform? (z.B. illegale Umwandlung von Wohngebäude/Flächen)</string>
    <string name="buildings_three">Gebäude ist in schlechtem Zustand? (z.B. Putz bröckelt ab)</string>
    <string name="buildings_four">Gebäude ist Gefahren ausgesetzt? (z.B. nicht abgesperrt)</string>
    <string name="buildings_five">Arbeiten am Gebäude sind problematisch? (z.B. Eingänge versperrt)</string>
    <string name="buildings_six">Elemente des Gebäudes sind defekt? (z.B. Tür, Fenster, Treppen, etc.)</string>
    <string name="path_heading">Geh- und Radwege</string>
    <string name="path_one">Weg ist beschädigt oder blockiert? (z.B. beschädigter Bordstein oder Löcher) </string>
    <string name="devices_heading">Geräte</string>
    <string name="devices_one">Rolltreppe/Fahrstuhl defekt?</string>
    <string name="devices_two">Probleme mit der Heizung? (z.B. in öffentlichen Einrichtungen)</string>
    <string name="devices_three">Geräte in öffentlichem Gebäude defekt? (z.B. Herd, Boiler)</string>
    <string name="devices_four">Notwendige Geräte fehlen? (z.B. Rauchmelder)</string>
    <string name="health_heading">Gesundheitsgefährdung</string>
    <string name="health_one">Gefahrstoffe festgestellt? (z.B. Schimmel,  Asbest, Chemischer Geruch)</string>
    <string name="health_two">Social Distancing wird missachtet?</string>
    <string name="noise_heading">Lärm</string>
    <string name="noise_one">Gibt es in der Gegend lautstärkebedingte Probleme? (z.B. Nachbarn, Fahrzeuge)</string>
    <string name="air_heading">Luft</string>
    <string name="air_one">Ist die Luftqualität stark beeinträchtigt? (z.B. durch Bauarbeiten, Rauch)</string>
    <string name="garbage_heading">Müll</string>
    <string name="garbage_one">Unsachgemäße Entsorgung von Müll festgestellt?</string>
    <string name="garbage_two">Sperr-/ Elektromüll wurde nicht abgeholt?</string>
    <string name="garbage_three">Mülleimer ist überfüllt?</string>
    <string name="parking_heading">Parken</string>
    <string name="parking_one">Probleme beim Parken? (z.B. defekte Parkautomaten) </string>
    <string name="parking_two">Problem mit parkendem Fahrzeug? (z.B. zugeparkter Gehweg, Falschparker) </string>
    <string name="smoke_heading">Rauch</string>
    <string name="smoke_one">Rauchbildung?</string>
    <string name="wc_heading">Sanitäre Anlagen</string>
    <string name="wc_one">Defekte sanitäre Anlagen? (z.B. Wasserhahn defekt) </string>
    <string name="streets_heading">Straßen</string>
    <string name="streets_one">Straßen sind beschädigt oder blockiert? (z.B. Schlagloch, Auffahrt)</string>
    <string name="streets_two">Beleuchtung ist defekt?</string>
    <string name="streets_three">Schilder defekt/ fehlend oder beklebt?</string>
    <string name="streets_four">Defekte Ampeln?</string>
    <string name="streets_five">Vereiste Flächen?</string>
    <string name="animals_heading">Tiere</string>
    <string name="animals_one">Tierkadaver gesehen? (z.B. tote Katze)</string>
    <string name="animals_two">Anhäufung von Nagetieren, Insekten oder Schädlingen?</string>
    <string name="animals_three">Unsachgemäße Tierhaltung? (z.B. Tiermisshandlung)</string>
    <string name="pollution_heading">Verschmutzung</string>
    <string name="pollution_one">Illegale Anbringung von Postern?</string>
</resources>