<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/baseline_favorite_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="732dp"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/slide_1_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/slide_1_heading"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/slide_1_description"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            <EditText
                android:id="@+id/user_id_entry_field"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="true"
                android:hint="@string/code_hint"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/user_name_entry_field"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="true"
                android:hint="@string/slide_2_name_hint"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/city_entry_field"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="true"
                android:hint="@string/slide_2_city_hint"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</RelativeLayout>